--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,35 @@
   <name>testngwebdriver</name>
   <description>This is project which define architect TestNG framework</description>
   
+  
+ <build>
+	    <!-- Source directory configuration -->
+	    <sourceDirectory>src</sourceDirectory>
+	    <plugins>
+	        <!-- Following plugin executes the testng tests -->
+	        <plugin>
+	            <groupId>org.apache.maven.plugins</groupId>
+	            <artifactId>maven-surefire-plugin</artifactId>
+	            <version>2.14.1</version>
+	            <configuration>
+	                <!-- Suite testng xml file to consider for test execution -->
+	                <suiteXmlFiles>
+	                    <suiteXmlFile>suites/testng.xml</suiteXmlFile>
+	                </suiteXmlFiles>
+	            </configuration>
+	        </plugin>
+	        <!-- Compiler plugin configures the java version to be usedfor compiling 
+	            the code -->
+	        <plugin>
+	            <artifactId>maven-compiler-plugin</artifactId>
+	            <configuration>
+	                <source>1.6</source>
+	                <target>1.6</target>
+	            </configuration>
+	        </plugin>
+	    </plugins>
+    </build>
+    
   <properties>
   <selenium.version>3.141.59</selenium.version>
   <testng.version>7.0.0</testng.version>
