--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,6 @@
 	            <artifactId>maven-surefire-plugin</artifactId>
 	            <version>2.14.1</version>
 	            <configuration>
-	                <!-- Suite testng xml file to consider for test execution -->
 	                <suiteXmlFiles>
 	                    <suiteXmlFile>suites/testng.xml</suiteXmlFile>
 	                </suiteXmlFiles>
@@ -29,30 +28,42 @@
  </properties>
 
  <dependencies>
-  <dependency>
-   <groupId>org.seleniumhq.selenium</groupId>
-   <artifactId>selenium-java</artifactId>
-   <version>${selenium.version}</version>
-  </dependency>
+ 	<dependency>
+	   <groupId>org.seleniumhq.selenium</groupId>
+	   <artifactId>selenium-java</artifactId>
+	   <version>${selenium.version}</version>
+  	</dependency>
   
-  <dependency>
-   <groupId>org.testng</groupId>
-   <artifactId>testng</artifactId>
-   <version>${testng.version}</version>
-   <scope>test</scope>
-  </dependency>
+  	<dependency>
+	   <groupId>org.testng</groupId>
+	   <artifactId>testng</artifactId>
+	   <version>${testng.version}</version>
+	   <scope>test</scope>
+  	</dependency>
   
-  <dependency>
-    <groupId>org.apache.commons</groupId>
-    <artifactId>commons-io</artifactId>
-    <version>1.3.2</version>
-</dependency>
+  	<dependency>
+	    <groupId>commons-io</groupId>
+	    <artifactId>commons-io</artifactId>
+	    <version>2.6</version>
+	</dependency>
 
-<dependency>
-    <groupId>org.seleniumhq.selenium</groupId>
-    <artifactId>selenium-chrome-driver</artifactId>
-    <version>3.141.59</version>
-</dependency>
+	<dependency>
+	    <groupId>org.seleniumhq.selenium</groupId>
+	    <artifactId>selenium-chrome-driver</artifactId>
+	    <version>3.141.59</version>
+	</dependency>
 
+	<dependency>
+		<groupId>io.github.bonigarcia</groupId>
+		<artifactId>webdrivermanager</artifactId>  
+		<version>3.8.1</version>
+	</dependency>
+
+	<dependency>
+	    <groupId>log4j</groupId>
+	    <artifactId>log4j</artifactId>
+	    <version>1.2.17</version>
+	</dependency>
+    
  </dependencies>
 </project>
