--- a/pom.xml
+++ b/pom.xml
@@ -12,13 +12,14 @@
 	        <plugin>
 	            <groupId>org.apache.maven.plugins</groupId>
 	            <artifactId>maven-surefire-plugin</artifactId>
-	            <version>2.14.1</version>
+	            <version>3.0.0-M4</version>
 	            <configuration>
 	                <suiteXmlFiles>
 	                    <suiteXmlFile>suites/testng.xml</suiteXmlFile>
 	                </suiteXmlFiles>
 	            </configuration>
 	        </plugin>
+            
 	    </plugins>
    </build>
     
@@ -38,7 +39,6 @@
 	   <groupId>org.testng</groupId>
 	   <artifactId>testng</artifactId>
 	   <version>${testng.version}</version>
-	   <scope>test</scope>
   	</dependency>
   
   	<dependency>
